[package]
name = "kamilata"
version = "0.1.2"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Mubelotix/Kamilata"
description = "A Peer-to-Peer Search Engine System (based on libp2p)"
readme = "README.md"
categories = ["network-programming"]
keywords = ["p2p", "search-engine", "distributed-systems", "libp2p"]

[dependencies]
libp2p = {version="0.51", features=["tokio", "noise", "mplex", "kad"]}
tokio = {version="1.28", features=["macros", "sync", "time"]}
futures = "0.3"
protocol = "3.4"
protocol-derive = "3.4"
unsigned-varint = "0.7"
asynchronous-codec = "0.6"
log = "0.4"
either = "1.8"
async-trait = "0.1"

[dev-dependencies]
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.8"
colored = "2.0"
